# CodingProject1

catkin_ws/.sigs/: p1  p2  p3  p4  p5  simulator-tool
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/p1/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/p2/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/p3/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/p4/: .catkin  .rosinstall  (+1 more)
catkin_ws/src/p1/: CMakeLists.txt  config.toml
catkin_ws/src/p2/: CMakeLists.txt  config.toml  setup.py
catkin_ws/src/p3/: CMakeLists.txt  config.toml
catkin_ws/src/p4/: CMakeLists.txt  config.toml  package.xml
catkin_ws/src/p5/: CMakeLists.txt  config.toml  package.xml  setup.py
catkin_ws/src/p5/launch/: main.launch  problem4.launch  problem4_solution.launch  problem5a.launch  problem5a_solution.launch  problem5b.launch  problem5b_solution.launch  visualize.launch  visualize_solution.launch
catkin_ws/src/p5/msg/: Action.msg  ActionEffect.msg  ActionOption.msg  State.msg
catkin_ws/src/p5/scenes/: p5.ttt
catkin_ws/src/p5/src/: problem1.py  problem2.py  problem3.py  problem4.py  problem5a.py  problem5b.py
catkin_ws/src/p5/srv/: ChooseAction.srv  CommandRobot.srv  ComputeEntropy.srv  DetectMetal.srv  FollowPath.srv  GetPosition.srv  GetTransitions.srv  InterpolatePath.srv  LocateBall.srv  ModelSenseAction.srv  SenseBall.srv
catkin_ws/src/turtle/: .drunk_turtle.py.swp  CMakeLists.txt  drunk_turtle.py
(+747 files in other folders)
