<?xml version="1.0"?>
<package>
  <name>p5</name>
  <version>1.0.0</version>
  <description>The solution code for Cornell Foundations of Robotics CP5</description>
  <maintainer email="wbthomason@cs.cornell.edu">Wil Thomason</maintainer>
  <license>MIT</license>
  <author email="wbthomason@cs.cornell.edu">Wil Thomason</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export></export>
</package>
